crates/bevy_reflect_compile_fail_tests/tests/reflect_derive/generics.fail.stderr
error[E0599]: no method named `get_field` found for struct `Foo` in the current scope
  --> tests/reflect_derive/generics.fail.rs:14:9
   |
4  | struct Foo<T> {
   | ------------- method `get_field` not found for this struct
...
14 |     foo.get_field::<NoReflect>("a").unwrap();
   |         ^^^^^^^^^ method not found in `Foo<NoReflect>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `get_field`, perhaps you need to implement one of them:
           candidate #1: `GetField`
           candidate #2: `GetTupleField`
           candidate #3: `GetTupleStructField`
